results/SVCOMP/specgen/log-instanceof3-2024_02_27_16_16_24.txt
class Main {
  //@ requires args != null;
  //@ ensures \result <==> args instanceof Object[];
  public static boolean f() {
    return args instanceof Object[];
  }
}
/home/max/Documents/JMLGPT/tmp/instanceof3.java:2: error: cannot find symbol
  //@ requires args != null;
               ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof3.java:3: error: cannot find symbol
  //@ ensures \result <==> args instanceof Object[];
                           ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof3.java:5: error: cannot find symbol
    return args instanceof Object[];
           ^
  symbol:   variable args
  location: class Main
3 errors

class Main {
  //@ requires args != null;
  //@ ensures \result <==> args instanceof Object[];
  public static boolean f() {
    return args instanceof Object[];
  }
}
/home/max/Documents/JMLGPT/tmp/instanceof3.java:2: error: cannot find symbol
  //@ requires args != null;
               ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof3.java:3: error: cannot find symbol
  //@ ensures \result <==> args instanceof Object[];
                           ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof3.java:5: error: cannot find symbol
    return args instanceof Object[];
           ^
  symbol:   variable args
  location: class Main
3 errors

class Main {
  //@ ensures \result <==> true; // Placeholder ensures clause
  public static boolean f() {
    return true; // Placeholder return statement
  }
}

